# Koopman4Rob

./: .gitignore  .main_demo.py.swp  .pre-commit-config.yaml  README.md  README.zh.md  basis.py  compare_features.py  config.py  hpc_train.sh  interactor.py  main.py  main_blip2.py  main_cyberdog.py  main_cyberdog_importance.py  main_demo.py  main_demo.sh  main_manipulation.py  main_resnet.py  main_xhand_importance.py  main_yolo.py  pixi.toml  plane_train.err  pyproject.toml  requirements.txt  ruff.toml  setup.py  stop_judger.py  test.py  test_stop_judge.py  visualize_fisher.py
configs/: cfg.py  config.yaml  data.py  extra.yaml  inter.py  test_hydra.py
configs/augmentation/: image.yaml
configs/data_loaders/: extra.yaml  infer.yaml  infer_static.yaml  live.yaml  test.yaml  train_val.yaml
configs/data_source/: infer.yaml  infer_static.yaml  live.yaml  live_mock.yaml  train_val.yaml
configs/dataset/: infer.yaml  train.yaml
configs/infer/: act.yaml  act_mock.yaml  (+6 more)
data/: blip2_feature_extractor.py  dataset.py  feature_analysis.ipynb  generate_bicycle_data.py  mcap_data_utils.py  visualize_traj.py
descriptive_file/: requirements.txt
models/: deep_koopman.py  ewc.py  ewc_model.py  multimodel.py  process_image.py
runner/: koopman_runner.py  main_demo.sh.e1135590  main_demo.sh.e1135598  main_demo.sh.o1135590
scripts/: main_blip2.py  main_cyberdog_importance.py  main_demo.py  main_resnet.py  main_xhand_importance.py  main_yolo.py  test.py  visualize_fisher.py
tests/: feature_analysis.ipynb  image_aug.py  run.bash
utils/: fifo_save.py  iter_manager.py  utils.py
(+129 files in other folders)
