[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koopman4rob"
version = "0.1.0"
description = "Koopman operator framework for robot learning"
authors = [{name="Tingxuan Leng"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "torch==2.1.0",
    "numpy==1.24.4",
    "matplotlib",
    "scipy",
    "tqdm==4.67.0",
    "matplotlib==3.7.5",
    "tensorboard"
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[tool.setuptools.packages.find]
where = ["koopman4rob"]
